fixed overflow

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -544,6 +544,7 @@ html {
 .posting-item .posting-title {
     font-size: 25px;
     margin: 0 0 10px 0;
+    overflow: hidden;
 }
 
 .posting-item .posting-details {
